--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
     <section id="oferty">
       <h2>Oferty na wakacje</h2>
       <ul>
-        <li>Wczasy nad morzem - od 1000 z³/os.</li>
-        <li>Wakacje w górach - od 800 z³/os.</li>
-        <li>Wypoczynek na Mazurach - od 1200 z³/os.</li>
+        <li>Wczasy nad morzem - od 1000 zÅ‚/os.</li>
+        <li>Wakacje w gÃ³rach - od 800 zÅ‚/os.</li>
+        <li>Wypoczynek na Mazurach - od 1200 zÅ‚/os.</li>
       </ul>
     </section>
     
     <section id="atrakcje">
       <h2>Najlepsze atrakcje wakacyjne</h2>
       <ol>
-        <li>P³ywanie i opalanie siê na pla¿y.</li>
-        <li>Górska wspinaczka i turystyka piesza.</li>
-        <li>¯eglowanie, windsurfing i kitesurfing.</li>
+        <li>PÅ‚ywanie i opalanie siÄ™ na plaÅ¼y.</li>
+        <li>GÃ³rska wspinaczka i turystyka piesza.</li>
+        <li>Å»eglowanie, windsurfing i kitesurfing.</li>
         <li>Wycieczki rowerowe i konne.</li>
-        <li>Zwiedzanie zabytków i muzeów.</li>
+        <li>Zwiedzanie zabytkÃ³w i muzeÃ³w.</li>
       </ol>
     </section>
     
     <section id="kontakt">
       <h2>Kontakt</h2>
-      <p>Skontaktuj siê z nami, aby zarezerwowaæ wakacje ju¿ teraz!</p>
+      <p>Skontaktuj siÄ™ z nami, aby zarezerwowaÄ‡ wakacje juÅ¼ teraz!</p>
       <ul>
         <li>Telefon: 123-456-789</li>
         <li>Email: wakacje@najlepszewczasy.pl</li>
@@ -49,7 +49,7 @@
   </main>
   
   <footer>
-    <p>&copy; 2023 Najlepsze Wczasy Sp. z o.o. | Wszelkie prawa zastrze¿one.</p>
+    <p>&copy; 2023 Najlepsze Wczasy Sp. z o.o. | Wszelkie prawa zastrzeÅ¼one.</p>
   </footer>
 </body>
 </html>
